--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@contentful/rich-text-html-renderer": "^13.4.0",
     "babel-plugin-styled-components": "^1.10.7",
     "browser-monads": "^1.0.0",
+    "contentful": "^7.14.4",
     "gatsby": "2.20.28",
     "gatsby-image": "^2.2.39",
     "gatsby-plugin-manifest": "^2.2.39",
