--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "gatsby": "2.20.28",
     "gatsby-image": "^2.2.39",
     "gatsby-plugin-manifest": "^2.2.39",
-    "gatsby-plugin-offline": "^3.0.32",
+    "gatsby-plugin-netlify": "^2.3.3",
+    "gatsby-plugin-offline": "^3.2.7",
+    "gatsby-plugin-preact": "^4.0.0",
     "gatsby-plugin-react-helmet": "^3.1.21",
     "gatsby-plugin-sharp": "^2.4.3",
     "gatsby-plugin-styled-components": "^3.2.1",
@@ -20,6 +22,8 @@
     "gatsby-source-filesystem": "^2.1.46",
     "gatsby-transformer-sharp": "^2.3.13",
     "netlify-lambda": "^1.6.3",
+    "preact": "^10.4.4",
+    "preact-render-to-string": "^5.1.9",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
